# myshell

./: .gitignore  CMakeLists.txt  alias.c  autocomplete.c  cat.c  cd.c  commandrule.c  echo.c  grep.c  history.c  ls.c  shell.c  syntaxanalyser.c  terminal_logger.c  type.c
configs/: alias  history
include/: alias.h  all_commands.h  autocomplete.h  cat.h  cd.h  commandrule.h  defines.h  echo.h  grep.h  history.h  ls.h  syntaxanalyser.h  terminal_logger.h  type.h
